[package]
name = "fetcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fetcher"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
name = "fetcher"

[dependencies]
reqwest = { version = "0.11", features = ["tokio-rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
entity = { path = "../entity" }
sea-orm = { version = "^0", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print"] }
chrono = "0.4"


[dev-dependencies]
wiremock = "0.5"
fake = { version = "2.5.0", features = ["http", "chrono"] }