[package]
name = "fetcher"
version = "0.1.0"
authors = ["Eric <Fistons> <eric@pedr0.net>"]
edition = "2021"

[[bin]]
name = "fetcher"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
name = "fetcher"

[dependencies]
reqwest = { version = "0.11", features = ["tokio-rustls", "native-tls-vendored"] }
tokio = {}
dotenvy = {}
sea-orm = {}
chrono = {}
tracing = {}
feed-rs = "1.1.0"
thiserror = {}

entity = { }
rss-common = { path = "../rss-common" }

[dev-dependencies]
wiremock = "0.5"
fake = { version = "2.5.0", features = ["http", "chrono"] }