[package]
name = "rss-common"
version = "0.1.0"
authors = ["Eric <Fistons> <eric@pedr0.net>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-opentelemetry = "0.17"
opentelemetry = { version = "0.17", features = ["tokio"] }
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio"] }
sentry-tracing = "0.27.0"
sentry = "0.27.0"