[package]
name = "common"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "common"

[dependencies]
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry-jaeger.workspace = true
opentelemetry-datadog.workspace = true
sentry-tracing.workspace = true
sentry.workspace = true
thiserror.workspace = true
anyhow.workspace = true
sqlx.workspace = true
chrono.workspace = true
secrecy.workspace = true
argon2.workspace = true
rand_core.workspace = true
reqwest.workspace = true
scraper.workspace = true
once_cell.workspace = true
feed-rs.workspace = true
serde.workspace = true
serde_json.workspace = true
jwt.workspace = true
actix-web.workspace = true


[dev-dependencies]
wiremock.workspace = true
tokio.workspace = true
speculoos.workspace = true
