[package]
name = "fetcher"
version.workspace = true
edition = "2021"
authors = ["Eric <Fistons> <eric@pedr0.net>"]

[[bin]]
name = "fetcher"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
name = "fetcher"

[dependencies]
reqwest.workspace = true
tokio.workspace = true
dotenvy.workspace = true
chrono.workspace = true
tracing.workspace = true
feed-rs.workspace = true
thiserror.workspace = true
anyhow.workspace = true
once_cell.workspace = true

common = { path = "../common" }

[dev-dependencies]
wiremock.workspace = true
fake.workspace = true
sqlx.workspace = true
