[package]
name = "rss-common"
version = "0.1.0"
authors = ["Eric <Fistons> <eric@pedr0.net>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
tracing.workspace = true
tracing-log.workspace = true
tracing-bunyan-formatter.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry-jaeger.workspace = true
sentry-tracing.workspace = true
sentry.workspace = true